--- a/package.json
+++ b/package.json
@@ -4,15 +4,21 @@
   "private": true,
   "dependencies": {
     "@ant-design/icons": "^4.2.1",
+    "@reduxjs/toolkit": "^1.4.0",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "antd": "^4.4.2",
+    "axios": "^0.19.2",
+    "link-preview-js": "^2.0.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-facebook-login": "^4.1.1",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "react-tiny-link": "^3.6.0",
+    "redux": "^4.0.5"
   },
   "scripts": {
     "start": "react-scripts start",
