--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "facebook-dashboard",
+  "homepage": "https://lephuhung.github.io/facebook-dashboard/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
